assets/scss/main.scss
/* ... */
.pf-v6-x-c-article__header {
  @media screen and (min-width: 992px) {
    border-top-right-radius: var(--pf-t--global--border--radius--medium);
  }

  @media screen and (min-width: 1129px) {
    border-top-left-radius: var(--pf-t--global--border--radius--medium);
  }
}

.pf-v6-c-card--full-width {
  @media screen and (max-width: 991px) {
    border-radius: 0;

    &::before {
      border-left-width: 0;
      border-right-width: 0;
    }
  }
}

.pf-v6-c-card--full-width-lg {
  @media screen and (max-width: 1199px) {
    border-radius: 0;

    &::before {
      border-left-width: 0;
      border-right-width: 0;
    }
  }
}

.pf-v6-c-card--articles {
  @media screen and (max-width: 1128px) {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;

    &::before {
      border-left-width: 0;
    }
  }
}

.pf-v6-c-section--articles > .pf-v6-c-card,
.pf-v6-c-card--see-also,
.pf-v6-c-grid--tweets > .pf-v6-c-card {
  @media screen and (max-width: 1128px) {
    border-top-right-radius: 0 !important;
    border-bottom-right-radius: 0;

    &::before {
      border-right-width: 0;
    }
  }
}

.pf-v6-c-card--lastcommit {
  @media screen and (max-width: 760px) {
    border-radius: 0;

    &::before {
      border-left-width: 0;
      border-right-width: 0;
    }
  }

  overflow-y: hidden;
}

.pf-v6-c-card--transparent {
  @extend .pf-v6-x-u-blur;

  background: rgba(255, 255, 255, 0.5) !important;

  @media (prefers-color-scheme: dark) {
    background: rgba(255, 255, 255, 0.88) !important;
  }

  > .pf-v6-c-card__title {
    @extend .pf-v6-x-u-text-shadow-sm;
  }
}

.pf-v6-c-page__main--index {
  position: absolute;
  width: 100%;
}

.pf-v6-c-card__title > h2 {
  font-weight: var(--pf-v6-c-card__title--FontWeight) !important;
}

.pf-v6-u-color-100 {
  color: #232323; // We don't have grey tones in PatternFly v6 yet
}

.pf-v6-u-color-200 {
  color: #414141; // We don't have grey tones in PatternFly v6 yet
}

.fireworks,
.snowflakes,
.rainfall {
  @extend .pf-v6-c-page__main--with-overlay;

  width: 100% !important;
  height: 100% !important;
  position: fixed !important;
  padding-top: 0 !important;
  z-index: 100 !important;
}

.fireworks ~ .snowflakes,
.fireworks ~ .rainfall,
.snowflakes ~ .rainfall {
  background: transparent !important;
}

.pf-v6-c-page__main--with-effects {
  background: transparent !important;
  &--without-blur {
    backdrop-filter: none !important;
  }
}

.pf-v6-u-ml-2xl--first-child {
  &:first-child {
    @extend .pf-v6-u-ml-2xl;
  }
}

// Rainfall; see https://codepen.io/tiger2380/pen/doNxQX
.rainfall__borders,
.rainfall__drops {
  position: fixed;
}

.rainfall__drops {
  @media (prefers-color-scheme: dark) {
    filter: brightness(0.2);
  }

  @media (prefers-color-scheme: light) {
    filter: brightness(2);
  }
}

.rainfall__raindrop {
  position: fixed;
  border-radius: 100%;
  background-image: url($bg);
  background-size: 100vw * 0.05 100vh * 0.05;
  background-position: 50%;
  transform: rotate(180deg) rotateY(0);
  z-index: 100 !important;
}

.rainfall__border {
  position: fixed;
  margin-left: 2px;
  margin-top: 1px;
  border-radius: 100%;
  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.5);
  transform: rotateY(0);
  z-index: 100 !important;
}

@for $i from 1 through 100 {
  $x: random();
  $y: random();

  $drop-width: 5px + random(11);
  $drop-stretch: 0.7+ (random() * 0.5);
  $drop-delay: (random() * 2.5) + 1;
  $drop-height: $drop-width * $drop-stretch;

  .rainfall__raindrop:nth-child(#{$i}) {
    left: $x * 100vw;
    top: $y * 100vh;

    width: $drop-width;
    height: $drop-height;
    background-position: percentage($x) percentage($y);
    animation: #{$drop-delay}s rainfall__falling 0.3s ease-in infinite;
  }

  .rainfall__border:nth-child(#{$i}) {
    left: $x * 100vw;
    top: $y * 100vh;

    width: $drop-width - 4;
    height: $drop-height;
    animation: #{$drop-delay}s rainfall__falling 0.3s ease-in infinite;
  }
}

@keyframes rainfall__falling {
  from {
  }
  to {
    transform: translateY(500px);
  }
}

@media (prefers-reduced-motion: reduce) {
  .borders,
  .drops {
    display: none;
  }
}

.pf-v6-x-u-text--center {
  text-align: center;
}

.twitterfeed__tweets__content img {
  @extend .pf-v6-u-mt-md;
}

.pf-v6-x-c-project__icon {
  @extend .pf-v6-u-mr-sm;
  max-width: 2rem;
}

.pf-v6-x-c-name {
  text-align: center;
  word-break: keep-all;
}

.twitterfeed {
  margin-top: -1rem;
}

a.pf-v6-c-button.pf-m-primary,
.pf-v6-x-u-hoverable {
  transition: all 0.2s ease-in-out;

  &:hover,
  &:focus {
    transform: scale(1.035);
  }

  &--rotate {
    &:hover,
    &:focus {
      transform: rotate(-5deg) scale(1.1);
    }
  }
}

.pf-v6-x-u-hoverable-parent {
  > img {
    transition: all 0.2s ease-in-out;
  }

  &:hover,
  &:focus {
    > img {
      transform: scale(1.05);
    }
  }

  &--rotate {
    &:hover,
    &:focus {
      > img {
        transform: rotate(-5deg) scale(1.1);
      }
    }
  }
}

.spotifystatus {
  .pf-v6-x-spotify {
    max-width: 40px;
    height: 100%;
    object-fit: cover;
  }
}

.twitterfeed .pf-v6-l-gallery__item img {
  aspect-ratio: 2;
  object-fit: cover;
}

.pf-v6-c-page__header {
  z-index: 10;
}

.pf-v6-c-page {
  display: block;
}

.pf-v6-c-page__main {
  min-height: 100%;
}

